Updates from Overleaf

--- a/bib.bib
+++ b/bib.bib
@@ -13,6 +13,80 @@
  volume = {228},
  year = {1979}
 }
+@ARTICLE{2003ApJ...588..696M,
+       author = {{Moretti}, A. and {Campana}, S. and {Lazzati}, D. and {Tagliaferri}, G.},
+        title = "{The Resolved Fraction of the Cosmic X-Ray Background}",
+      journal = {\apj},
+     keywords = {Cosmology: Observations, Cosmology: Diffuse Radiation, Surveys, X-Rays: Diffuse Background, X-Rays: General, Astrophysics},
+         year = 2003,
+        month = may,
+       volume = {588},
+       number = {2},
+        pages = {696-703},
+          doi = {10.1086/374335},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0301555},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003ApJ...588..696M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2009A&A...493..579G,
+       author = {{G{\"u}nther}, H.~M. and {Matt}, S.~P. and {Li}, Z. -Y.},
+        title = "{Revealing the fastest component of the DG Tauri outflow through X-rays}",
+      journal = {\aap},
+     keywords = {stars: formation, stars: winds, outflows, stars:, individual: DG Tau, stars: mass-loss, Astrophysics},
+         year = 2009,
+        month = jan,
+       volume = {493},
+       number = {2},
+        pages = {579-584},
+          doi = {10.1051/0004-6361:200810886},
+archivePrefix = {arXiv},
+       eprint = {0811.1666},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009A&A...493..579G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2003ApJ...582.1032J,
+       author = {{Jura}, M.},
+        title = "{A Flared, Orbiting, Dusty Disk around HD 233517}",
+      journal = {\apj},
+     keywords = {Stars: Circumstellar Matter, Stars: Mass Loss, Astrophysics},
+         year = 2003,
+        month = jan,
+       volume = {582},
+       number = {2},
+        pages = {1032-1035},
+          doi = {10.1086/344704},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0209272},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003ApJ...582.1032J},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{2014ApJ...796...24P,
+       author = {{Primini}, F.~A. and {Kashyap}, V.~L.},
+        title = "{Determining X-Ray Source Intensity and Confidence Bounds in Crowded Fields}",
+      journal = {\apj},
+     keywords = {methods: data analysis, methods: statistical, X-rays: general, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2014,
+        month = nov,
+       volume = {796},
+       number = {1},
+          eid = {24},
+        pages = {24},
+          doi = {10.1088/0004-637X/796/1/24},
+archivePrefix = {arXiv},
+       eprint = {1410.2564},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014ApJ...796...24P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @article{1990ARA&A..28..215D,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
