--- a/bib.bib
+++ b/bib.bib
@@ -1,3 +1,21 @@
+@BOOK{1967pswh.book.....Z,
+       author = {{Zel'dovich}, Ya. B. and {Raizer}, Yu. P.},
+        title = "{Physics of shock waves and high-temperature hydrodynamic phenomena}",
+         year = 1967,
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1967pswh.book.....Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@BOOK{1986rpa..book.....R,
+       author = {{Rybicki}, George B. and {Lightman}, Alan P.},
+        title = "{Radiative Processes in Astrophysics}",
+         year = 1986,
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1986rpa..book.....R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @string{june = {June}}
 
 @article{1979ApJ...228..939C,
@@ -1013,3 +1031,20 @@ archivePrefix = {ascl},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@MISC{lightkurve,
+   author = {{Lightkurve Collaboration} and {Cardoso}, J.~V.~d.~M. and
+             {Hedges}, C. and {Gully-Santiago}, M. and {Saunders}, N. and
+             {Cody}, A.~M. and {Barclay}, T. and {Hall}, O. and
+             {Sagear}, S. and {Turtelboom}, E. and {Zhang}, J. and
+             {Tzanidakis}, A. and {Mighell}, K. and {Coughlin}, J. and
+             {Bell}, K. and {Berta-Thompson}, Z. and {Williams}, P. and
+             {Dotson}, J. and {Barentsen}, G.},
+    title = "{Lightkurve: Kepler and TESS time series analysis in Python}",
+ keywords = {Software, NASA},
+howpublished = {Astrophysics Source Code Library},
+     year = 2018,
+    month = dec,
+archivePrefix = "ascl",
+   eprint = {1812.013},
+   adsurl = {http://adsabs.harvard.edu/abs/2018ascl.soft12013L},
+}
